--- a/QuasarExtension/QuasarExtension/QuasarExtension.csproj
+++ b/QuasarExtension/QuasarExtension/QuasarExtension.csproj
@@ -161,4 +161,8 @@
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /Y "$(TargetDir)*.*" "$(AppData)\Dynamo\Dynamo Revit\2.0\packages\Quasar\bin\"
+</PostBuildEvent>
+  </PropertyGroup>
 </Project>
