--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,13 @@
 backup/
 upcoming/
 dumps/
+Quasar v0.0.1/
+Quasar v0.0.2/
+Quasar v0.0.3/
+Quasar v0.0.4/
+Quasar v0.0.5/
+Quasar v0.0.6/
+Quasar v0.0.7/
+Quasar v0.0.8/
+Quasar v0.0.9/
 .vs
