icon tool fixed

--- a/QuasarZeroTouch/Quasar/Quasar.csproj
+++ b/QuasarZeroTouch/Quasar/Quasar.csproj
@@ -48,7 +48,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>..\..\..\..\..\Autodesk\Revit 2017\RevitAPIUI.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Autodesk\Revit 2017\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitNodes">
