--- a/QuasarZeroTouch/Quasar/Quasar.csproj
+++ b/QuasarZeroTouch/Quasar/Quasar.csproj
@@ -39,6 +39,16 @@
       <HintPath>..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.0.1.4945\lib\net45\DynamoUnits.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="IronPython, Version=2.7.0.40, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\IronPython 2.7\IronPython.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Microsoft.Scripting, Version=1.1.0.20, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\IronPython 2.7\Platforms\Net40\Microsoft.Scripting.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="ProtoGeometry, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.0.1.4945\lib\net45\ProtoGeometry.dll</HintPath>
       <Private>False</Private>
@@ -59,17 +69,36 @@
       <HintPath>C:\Program Files\Dynamo\Dynamo Revit\1.3\Revit_2017\RevitServices.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Core">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Drawing">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Xml.Linq">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Data.DataSetExtensions">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Microsoft.CSharp">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Data">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Net.Http">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Xml">
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Programming.cs" />
     <Compile Include="RevitNodes.cs" />
     <Compile Include="DynamoNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,6 +107,8 @@
     <Content Include="Quasar_DynamoCustomization.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\Quasar.Programming.ExecutePythonString.Small.png" />
+    <None Include="Resources\Quasar.Programming.ExecutePythonString.Large.png" />
     <None Include="Resources\4cb7cd42-fffa-4557-a3e5-7e5e74e0aed1.Large.png" />
     <None Include="Resources\e52835e2-4639-465f-acbc-0a9bda480092.Large.png" />
     <None Include="Resources\8834f6e5-f2c7-4df2-85ec-3cc5b4549004.Large.png" />
@@ -162,8 +193,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>xcopy /Y "$(TargetDir)*.*" "$(AppData)\Dynamo\Dynamo Revit\2.0\packages\Quasar\bin\"
+</PostBuildEvent>
   </PropertyGroup>
   <Target Name="BeforeBuild">
     <GetReferenceAssemblyPaths TargetFrameworkMoniker=".NETFramework, Version=v4.6">
