--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,7 @@ packages/
 bin/
 obj/
 QuasarNodeModel/
-QuasarNodeModelFunction
+QuasarNodeModelFunction/
+Quasar v0.1.3/
+Quasar v2.0.1/
+Quasar v2.1.1
